# wit-flatten-test

./: Cargo.toml
src/: main.rs
wit/: deps.toml  sandbox.wit
